Updated colours, fonts and added prism.js support

--- a/assets/styles/_settings.scss
+++ b/assets/styles/_settings.scss
@@ -1,10 +1,10 @@
 // Color Settings
 $background-color: #ECEEF0;
 $text-color: #444444;
-$secondary-text-color: #82969C;
-$accent-color: #009BCD;
-$secondary-accent-color: #007EA6;
-$highlight-color: RGBA(147, 187, 201, 0.5);
+$secondary-text-color: #304163;
+$accent-color: #516C8D;
+$secondary-accent-color: #516C8D;
+$highlight-color: RGBA(81, 108, 141, 0.5);
 
 // Font Family
-$font-family: "Oxygen", "Helvetica Neue", "Arial", sans-serif;
+$font-family: "Lato", "Helvetica Neue", "Arial", sans-serif;
