--- a/default.hbs
+++ b/default.hbs
@@ -15,8 +15,9 @@
 
 	{{! Styles and Scripts }}
 	<link rel="stylesheet" type="text/css" href="{{asset "styles/build/style.css"}}">
-	<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Oxygen:400,700">
-	
+	<link rel="stylesheet" type="text/css" href="{{asset "styles/build/prism.css"}}" />
+	<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Lato:400,700">
+
 	{{! Prefetch next page and previous pages, if they exist }}
 	{{#if pagination.next}}<link href="{{page_url pagination.next}}" rel="prefetch">{{/if}}
 	{{#if pagination.prev}}<link href="{{page_url pagination.prev}}" rel="prefetch">{{/if}}
@@ -30,14 +31,14 @@
 		{{#if @blog.logo}} blog-has-logo{{/if}}
 		{{#if author.cover}} author-has-cover{{/if}}
 		{{#if author.image}} author-has-image{{/if}}"
-	{{/is}} 
+	{{/is}}
 	{{#is "home, index, tag"}}
 		{{#if @blog.cover}}style="background-image: url({{@blog.cover}});"{{/if}}
 	{{/is}}
 	{{#is "author"}}
 		{{#if @blog.cover}}{{#if author.cover}}style="background-image: url({{author.cover}});"{{else}}style="background-image: url({{@blog.cover}});"{{/if}}{{/if}}
 	{{/is}}>
-	
+
 	{{! Everything else gets inserted here }}
 	{{{body}}}
 
@@ -46,7 +47,6 @@
 		<div class="inner">
 			 <section class="copyright">All content copyright <a href="{{@blog.url}}/">{{@blog.title}}</a> &copy; {{date format="YYYY"}} &bull; All rights reserved.</section>
 			 <section class="poweredby">Proudly published with <a class="icon-ghost" href="https://ghost.org">Ghost</a></section>
-			 <section class="themeinfo"><a href="http://scotthsmith.com/projects/decode/">Decode</a> by <a href="http://scotthsmith.com">Scott Smith</a></section>
 		</div>
 	</footer>
 
@@ -56,5 +56,6 @@
 	{{! Ghost outputs important scripts and data with this tag }}
 	{{ghost_foot}}
 	<script src="{{asset "scripts/build/main.js"}}"></script>
+	<script type="text/javascript" src="{{asset "scripts/build/prism.js"}}"></script>
 </body>
 </html>
